# xfce4-calculator-plugin

./: .cppcheck-false-positives  .gitignore  AUTHORS  COPYING  COPYING.LIB  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  configure.ac.in  configure.in.in  meson.build
icons/: Makefile.am  meson.build
icons/16x16/: Makefile.am
icons/22x22/: Makefile.am
icons/24x24/: Makefile.am
icons/256x256/: Makefile.am
icons/32x32/: Makefile.am
icons/64x64/: Makefile.am
panel-plugin/: Makefile.am  calctest.c  calculator.c  calculator.desktop.in  constants.h  eval.c  eval.h  grammar.txt  lexer.c  lexer.h  meson.build  parser.c  parser.h  parsetree.c  parsetree.h
po/: LINGUAS  POTFILES.in  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fa_IR.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lo.po  lt.po  ms.po  nb.po  nl.po  oc.po  pl.po  pt.po  (+15 more)
tests/: Makefile.am  meson.build  test-abs.awk  test-acos.awk  test-asin.awk  test-atan.awk  test-cos.awk  test-cube-root.awk  test-div-zero-negative.awk  test-div-zero-zero.awk  test-div-zero.awk  test-e-notation.awk  test-exp.awk  test-func.awk  test-hex.awk  test-log.awk  test-log10-negative.awk  test-log10-zero.awk  test-log10.awk  test-log2.awk  test-minus.awk  test-modulo.awk  test-pi.awk  test-pow.awk  test-simple-expr.awk  test-sin.awk  test-sqrt-minus-one.awk  test-sqrt.awk  test-tan.awk
