# $Id$

EXTRA_DIST =								\
	$(TESTS)

TESTS = 								\
	test-simple-expr.awk						\
	test-minus.awk							\
	test-modulo.awk							\
	test-e-notation.awk						\
	test-abs.awk							\
	test-sqrt.awk							\
	test-sqrt-minus-one.awk						\
	test-hex.awk							\
	test-cube-root.awk						\
	test-log10.awk							\
	test-log10-zero.awk						\
	test-log10-negative.awk						\
	test-log.awk							\
	test-log2.awk							\
	test-exp.awk							\
	test-div-zero.awk						\
	test-div-zero-negative.awk					\
	test-div-zero-zero.awk						\
	test-pi.awk							\
	test-sin.awk							\
	test-cos.awk							\
	test-tan.awk							\
	test-asin.awk							\
	test-acos.awk							\
	test-atan.awk							\
	test-pow.awk

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
